重写并发包完成